tests/snapshots/render/nx-list.snap
---
source: tests/render.rs
assertion_line: 38
expression: out
---
nx  [Node.js, Nx]

  npm run test                    Run test across Nx projects
  npm run ng                      Run Nx
  npm run start:api               Serve api with Nx  ∞ long-running
  nx run-many -t build
  nx run-many -t lint             Check source code with ESLint
  nx run-many -t e2e
  nx run-many -t format           Format source code with Prettier
  nx run-many -t release-check    Print message
  nx affected -t build test lint
  nx graph                        Open Nx project graph

apps/api  [Nx, Docker, Vitest]
  nx run api:serve    Serve app  ∞ long-running
  nx run api:build    Build with esbuild
  nx run api:test     Run Jest tests
  nx run api:docker   Build Docker image
  nx run api:ci       Run linting, type checks, and tests
  nx run api:release

apps/web  [Node.js, Nx, Vitest, Cloudflare Workers]
  npm run test       Run Vitest tests
  npm run typecheck  Check TypeScript types
  nx run web:serve   Serve app with Vite  ∞ long-running
  nx run web:build   Build with Vite
  nx run web:lint    Check source code with ESLint
  nx run web:format  Format source code with Prettier
  nx run web:e2e     Run end-to-end tests
  nx run web:deploy  Deploy Cloudflare Worker  [external]
