tests/snapshots/render/nx-why-api-build.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
api:build  Build with esbuild
  command     nx run api:build
  in          .
  project     api (apps/api)
  source      declared by the project (nx)
  confidence  exact
  risk        safe
