tests/snapshots/render/nx-why-test.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
test  Run test across Nx projects
  command     npm run test
  in          .
  project     nx (.)
  source      declared by the project (npm)
  confidence  exact
  risk        safe
  runs        nx run-many -t test
