tests/snapshots/render/polyglot-ci.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
No CI pipelines found (looked for .github/workflows/*.yml and .gitlab-ci.yml).
